# hsrt-timetable

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/hsrt_timetable/: __init__.py  client.py  programs.py  semesters.py
tests/: test_client.py  test_programs.py  test_semesters.py
